# mod_hostinglimits

./: CMakeLists.txt  LICENSE.TXT  README.md  hsphere_modhostinglimits.conf  hsphere_modhostinglimits1_3.conf  mod_hostinglimits.spe_.hsphere  mod_hostinglimits.spec  mod_hostinglimits.spec.osc  modhostinglimits.conf  modhostinglimits.conf.EA4  suexec.patch
apr/: apr-1.2.7-11.1.lve.patch  apr-1.2.7-11.2.lve.patch  apr-1.2.7-11.3.lve.patch  apr-1.3.9.1.lve.patch  apr-1.3.9.2.lve.patch  apr-1.3.9.3.lve.patch  apr-1.4.2.2.lve.patch  apr-2.0-httpd.1.patch  apr-2.0-httpd.2.patch  apr-2.0-httpd.3.patch  apr-2.0-httpd.patch  apr-2.2-httpd.1.patch  apr-2.2-httpd.2.patch  apr-2.2-httpd.3.patch  apr-2.2-httpd.4.patch  apr-2.2-httpd.patch  apr-2.4-httpd.3.patch
cmake/: FindApacheForBuild.cmake  FindApacheForCPanel.cmake
src/apache1.3/: mod_hostinglimits.c
src/apache2.x/: mod_hostinglimits.c
src/apache2.x/lve/: lve-ctl.h  lve-type.h  secureio.h
